# git-dive

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/: settings.yml
.github/workflows/: ci.yml  post-release.yml  rust-next.yml
docs/: comparison.md
src/: args.rs  assets.rs  blame.rs  config.rs  git2_config.rs  git_pager.rs  main.rs
src/assets/: lazy_theme_set.rs  mod.rs
tests/: cli.rs  docs.rs
tests/testsuite/: cli.rs  docs.rs
