[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "git-dive"
description = "Dive into a file's history to find root cause"
version = "0.1.6"
repository = "https://github.com/gitext-rs/git-dive"
documentation = "https://github.com/gitext-rs/git-dive"
readme = "README.md"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-dive/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
git2 = { version = "0.17.1", default-features = false }
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.0.1"
log = "0.4.20"
env_logger = { version = "0.10.0", default-features = false, features = ["color"] }
colorchoice-clap = "1.0.2"
proc-exit = "2.0.1"
human-panic = "1.2.0"
anyhow = "1.0.75"
syntect = { version = "5.1.0", default-features = false, features = ["parsing", "regex-onig"] }
terminal_size = "0.2.6"
textwrap = "0.16.0"
anstyle = "1.0.2"
anstream = "0.6.4"
is-terminal = "0.4.9"
content_inspector = "0.2.4"
git-config-env = "0.2.0"
shlex = "1.1.0"
anstyle-syntect = "1.0.0"
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
flate2 = "1.0.27"
once_cell = "1.18.0"
bugreport = "0.5.0"
dunce = "1.0.4"
encoding_rs = "0.8.33"
path-clean = "1.0.1"

[dev-dependencies]
git-fixture = "0.3.2"
snapbox = { version = "0.4.12", features = ["path"] }
term-transcript = "0.2.0"

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
