[workspace]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.76"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[workspace.lints.rust]
rust_2018_idioms = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"  # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "warn"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[package]
name = "git-dive"
description = "Dive into a file's history to find root cause"
version = "0.1.6"
repository = "https://github.com/gitext-rs/git-dive"
documentation = "https://github.com/gitext-rs/git-dive"
readme = "README.md"
categories = ["command-line-interface", "development-tools"]
keywords = ["git", "cli"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/gitext-rs/git-dive/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
git2 = { version = ">=0.18, <=0.19", default-features = false }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
env_logger = { version = "0.11.3", default-features = false, features = ["color"] }
colorchoice-clap = "1.0.3"
proc-exit = "2.0.1"
human-panic = "2.0.0"
anyhow = "1.0.82"
syntect = { version = "5.2.0", default-features = false, features = ["parsing", "regex-onig"] }
terminal_size = "0.3.0"
textwrap = "0.16.1"
anstyle = "1.0.6"
anstream = "0.6.13"
is-terminal = "0.4.12"
content_inspector = "0.2.4"
git-config-env = "0.2.1"
shlex = "1.3.0"
anstyle-syntect = "1.0.0"
bincode = "1.3.3"
serde = { version = "1.0.199", features = ["derive"] }
flate2 = "1.0.30"
once_cell = "1.19.0"
bugreport = "0.5.0"
dunce = "1.0.4"
encoding_rs = "0.8.34"
path-clean = "1.0.1"

[dev-dependencies]
git-fixture = "0.3.4"
snapbox = { version = "0.6.0", features = ["dir"] }
term-transcript = "0.3.0"
automod = "1.0.14"

[features]
default = ["vendored-libgit2"]
vendored-libgit2 = ["git2/vendored-libgit2"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1

[lints]
workspace = true
